{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 33,
  "lineage": "f60ec875-0b96-522d-9f7d-edb6df6b30ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:133954050484:internet-gateway/igw-033c66759c0c06ea3",
            "id": "igw-033c66759c0c06ea3",
            "owner_id": "133954050484",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "ecs-node-production"
            },
            "tags_all": {
              "Name": "ecs-node-production"
            },
            "vpc_id": "vpc-022929c631a82ba63"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133954050484",
            "id": "igw-033c66759c0c06ea3",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:133954050484:loadbalancer/app/app-lb/6e1d86bbad661b82",
            "arn_suffix": "app/app-lb/6e1d86bbad661b82",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-1539187859.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:133954050484:loadbalancer/app/app-lb/6e1d86bbad661b82",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "region": "ap-southeast-2",
            "security_groups": [
              "sg-0ef106d78d8339853"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00520c7cc91df7587"
              },
              {
                "subnet_id": "subnet-0945ed2773bd0f9f1"
              },
              {
                "subnet_id": "subnet-0dee219ec0fc2d41e"
              }
            ],
            "subnets": [
              "subnet-00520c7cc91df7587",
              "subnet-0945ed2773bd0f9f1",
              "subnet-0dee219ec0fc2d41e"
            ],
            "vpc_id": "vpc-022929c631a82ba63",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:133954050484:loadbalancer/app/app-lb/6e1d86bbad661b82"
          },
          "dependencies": [
            "aws_security_group.ecs_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:133954050484:listener/app/app-lb/6e1d86bbad661b82/b2ffa2e653b8b5d8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:133954050484:targetgroup/tf-20260428015021410300000001/14e975f8b85cb7f8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:133954050484:listener/app/app-lb/6e1d86bbad661b82/b2ffa2e653b8b5d8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:133954050484:loadbalancer/app/app-lb/6e1d86bbad661b82",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:133954050484:listener/app/app-lb/6e1d86bbad661b82/b2ffa2e653b8b5d8"
          },
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.tg",
            "aws_security_group.ecs_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:133954050484:targetgroup/tf-20260428015021410300000001/14e975f8b85cb7f8",
            "arn_suffix": "targetgroup/tf-20260428015021410300000001/14e975f8b85cb7f8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:133954050484:targetgroup/tf-20260428015021410300000001/14e975f8b85cb7f8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:133954050484:loadbalancer/app/app-lb/6e1d86bbad661b82"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20260428015021410300000001",
            "name_prefix": "tf-",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-022929c631a82ba63"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:133954050484:targetgroup/tf-20260428015021410300000001/14e975f8b85cb7f8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:133954050484:route-table/rtb-092818c6035b7ddc5",
            "id": "rtb-092818c6035b7ddc5",
            "owner_id": "133954050484",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-033c66759c0c06ea3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-node-production"
            },
            "tags_all": {
              "Name": "ecs-node-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-022929c631a82ba63"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133954050484",
            "id": "rtb-092818c6035b7ddc5",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c9dcbb027baa94b",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-092818c6035b7ddc5",
            "subnet_id": "subnet-0dee219ec0fc2d41e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133954050484",
            "id": "rtbassoc-02c9dcbb027baa94b",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0831823ed8af1deca",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-092818c6035b7ddc5",
            "subnet_id": "subnet-00520c7cc91df7587"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133954050484",
            "id": "rtbassoc-0831823ed8af1deca",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e04ce4d1417d181",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-092818c6035b7ddc5",
            "subnet_id": "subnet-0945ed2773bd0f9f1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133954050484",
            "id": "rtbassoc-01e04ce4d1417d181",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:133954050484:security-group/sg-0ef106d78d8339853",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef106d78d8339853",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260428005005456100000001",
            "name_prefix": "terraform-",
            "owner_id": "133954050484",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-022929c631a82ba63"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133954050484",
            "id": "sg-0ef106d78d8339853",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:133954050484:subnet/subnet-0dee219ec0fc2d41e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.1.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dee219ec0fc2d41e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133954050484",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "ecs-node-production-public1"
            },
            "tags_all": {
              "Name": "ecs-node-production-public1"
            },
            "vpc_id": "vpc-022929c631a82ba63"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133954050484",
            "id": "subnet-0dee219ec0fc2d41e",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:133954050484:subnet/subnet-00520c7cc91df7587",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.1.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00520c7cc91df7587",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133954050484",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "ecs-node-production-public2"
            },
            "tags_all": {
              "Name": "ecs-node-production-public2"
            },
            "vpc_id": "vpc-022929c631a82ba63"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133954050484",
            "id": "subnet-00520c7cc91df7587",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:133954050484:subnet/subnet-0945ed2773bd0f9f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.1.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0945ed2773bd0f9f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133954050484",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "ecs-node-production-public3"
            },
            "tags_all": {
              "Name": "ecs-node-production-public3"
            },
            "vpc_id": "vpc-022929c631a82ba63"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133954050484",
            "id": "subnet-0945ed2773bd0f9f1",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:133954050484:vpc/vpc-022929c631a82ba63",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/24",
            "default_network_acl_id": "acl-09f833679646ae034",
            "default_route_table_id": "rtb-01c3db3f45df026ac",
            "default_security_group_id": "sg-0c8e76dae0a8388eb",
            "dhcp_options_id": "dopt-00d8d2cd19a30d989",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-022929c631a82ba63",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c3db3f45df026ac",
            "owner_id": "133954050484",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "ecs-node-production"
            },
            "tags_all": {
              "Name": "ecs-node-production"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "133954050484",
            "id": "vpc-022929c631a82ba63",
            "region": "ap-southeast-2"
          }
        }
      ]
    }
  ]
}